--- a/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
+++ b/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
@@ -1,13 +1,32 @@
 
-Jak bylo nastíněno v kapitole \odkazKapitola{kNavrh}, databázové řešení staví na streaming replikaci a~skládá se ze tří uzlů v~clusteru, jednoho master serveru a dvou slave serverů. Pokud je správně provedena příprava dle kapitoly \odkazKapitola{kPriprava}, samotné nastavení replikace není nijak náročné. V první fázi je potřeba konfigurace souboru \texttt{postgresql.conf} na master serveru. Pro asynchonní replikaci stačí editace parametrů: 
+Jak bylo nastíněno v kapitole \odkazKapitola{kNavrh}, databázové řešení staví na
+streaming replikaci a~skládá se ze tří uzlů v~clusteru - jednoho master serveru a
+dvou slave serverů. Pokud je správně provedena příprava dle kapitoly
+\odkazKapitola{kPriprava}, samotné nastavení replikace není nijak náročné. V
+první fázi je potřeba zeditovat soubor \texttt{postgresql.conf} na master
+serveru. Pro asynchonní replikaci stačí nastavit parametry:
 \begin{itemize}
-\item \texttt{wal\_level}, který určuje, kolik informací má být zapsáno do transakčního logu (WAL) a
-\item \texttt{max\_wal\_senders}, který odpovídá maximálnímu počtu připojených slave serverů. 
+\item \texttt{wal\_level}, který určuje, jaké informace mají být do transakčního
+  logu (WAL) zapisovány a
+\item \texttt{max\_wal\_senders}, který nastavuje maximální počet připojených slave serverů.
 \end{itemize}
 
-Hodnota \texttt{wal\_level}, stanovena na \texttt{hot\_stadby}, zajistí, že na slave serveru bude umožněno dotazování. Vzhledem k tomu, že se bude na master server připojovat pouze \texttt{slave1} a všechny další slave servery se poté budou připojovat k němu, hodnota \texttt{1} zcela dostačuje. Je však možné hodnotu rovnou navýšit, aby se soubor v budoucnu nemusel znovu editovat z důvodu připojení dalšího serveru.
+\begin{framed}
+  zkontrolovat obsah
+\end{framed}
 
-Tyto dva parametry stačí pro achynchronní replikace, pro nastavení synchronní je ještě potřeba přidat \texttt{synchronous\_standby\_names}, jehož hodnota může být libovolné slovo. 
+Hodnota \texttt{wal\_level} nastavená na \texttt{hot\_stadby} zajistí, že na
+slave serveru bude umožněno dotazování. Vzhledem k tomu, že se bude na master
+server připojovat pouze \texttt{slave1} a všechny další slave servery se poté
+budou připojovat k němu, hodnota \texttt{1} parametru \texttt{max\_wal\_senders}
+zcela dostačuje. Je však možné hodnotu rovnou navýšit, aby se soubor v budoucnu
+nemusel znovu editovat z důvodu připojení dalšího serveru.
+
+Tyto dva parametry stačí pro nastavnení achynchronní replikace, pro nastavení
+synchronní je ještě potřeba přidat parametr
+\texttt{synchronous\_standby\_names}, jehož hodnota je použita při výběru slave
+serverů pro synchronní replikaci (viz parametr \texttt{application\_name} u
+editace souboru \texttt{recovery.conf}).
 
 Konfigurace \texttt{postgres.conf} na master serveru:
 \begin{lstlisting}
@@ -16,34 +35,47 @@ max_wal_senders = 1
 synchronous_standby_names = 'gis'
 \end{lstlisting}
 
-Stejně tak je potřeba konfigurovat \texttt{postgresql.conf} na slave serverech. Hodnoty \texttt{wal\_level} a \texttt{max\_level\_sender} můžou a nemusí zůstat stejné jako na masteru. Pokud však má být slave připraven zastoupit master server v případě jeho výpadku, pak je vhodné, aby hodnoty byly nastaveny shodně. Na slave serveru je dále potřeba editovat:
+Stejně tak je potřeba konfigurovat \texttt{postgresql.conf} na slave serverech.
+Hodnoty parametrů \texttt{wal\_level} a \texttt{max\_level\_sender} můžou a
+nemusí zůstat stejné jako na masteru. Pokud však má být slave připraven
+zastoupit master server v případě jeho výpadku, je nutné, aby hodnoty byly
+nastaveny shodně.  Na slave serveru je dále potřeba nastavit:
+\begin{framed}
+  zkontrolovat obsah
+\end{framed}
 \begin{itemize}
-  \item\texttt{hot\_standby}, který určuje, zda je na slave serveru umožněno dotazování a 
-  \item\texttt{hot\_stadby\_feedback}, který udává, zda bude replika informovat master server o příkazech, které na ní byly provedeny.
+  \item\texttt{hot\_standby}, který určuje, zda je na slave serveru umožněno
+    dotazování a
+  \item\texttt{hot\_stadby\_feedback}, který který omezuje riziko přerušení
+    dotazu na slave, v případě kolidujících změn na master databázi
 \end{itemize}
 
-Konfigurace \texttt{postgresql.conf} shodně na obou slave serverech (na \texttt{slave1} a \texttt{slave2}): 
+Konfigurace \texttt{postgresql.conf} shodně na obou slave serverech (na \texttt{slave1} a \texttt{slave2}):
 \begin{lstlisting}
 wal_level = hot_standby
 max_wal_senders = 5
-hot_standby = on	
+hot_standby = on
 hot_standby_feedback = on
 \end{lstlisting}
 
-Posledním krokem je vytvoření souboru \texttt{recovery.conf} na slave serveru ve složce s daty, který definuje parametry:
-\begin{itemize}
-\item \texttt{standby\_mode}, který povoluje či zakazuje použití serveru jako slave a
-\item \texttt{primary\_conninfo}, který nastavuje informace o serveru, ze kterého budou data replikována. Parametr nastavuje IP adresu serveru, ze kterého se data budou replikovat, název replikačního uživatele a jeho heslo a v případě synchronní replikace ještě klíčové slovo, které musí být shodné s hodnotou, která byla nastavená na master serveru v souboru \texttt{postgresql.conf} v parametru \texttt{synchronous\_standby\_name}.
-\end{itemize}
+Posledním krokem je vytvoření souboru \texttt{recovery.conf} na slave serveru ve
+složce s daty, který definuje parametry:
+\texttt{standby\_mode}, který povoluje či zakazuje použití serveru jako slave a
+\texttt{primary\_conninfo}, který nastavuje informace o serveru, ze kterého
+budou data replikována. Parametr nastavuje IP adresu serveru, ze kterého se data
+budou replikovat, název replikačního uživatele a jeho heslo a v případě
+synchronní replikace ještě klíčové slovo, které musí být shodné s hodnotou,
+která byla nastavená na master serveru v souboru \texttt{postgresql.conf} v
+parametru \texttt{synchronous\_standby\_name}.
 
 Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na \texttt{slave1}, který je připojován na master server a běží jako synchronní:
 
 \begin{lstlisting}
 standby_mode='on'
-primary_conninfo='host=192.168.1.100 user=replikator password=kgigis application_name=gis'  
+primary_conninfo='host=192.168.1.100 user=replikator password=kgigis application_name=gis'
 \end{lstlisting}
 
-V návrhu je počítáno s kaskádovou replikací, tedy s tím, že se \texttt{slave1} bude připojovat na \texttt{slave2} místo na master server. To lze nastavit úpravou souboru \texttt{recovery.conf}, kde IP adresa parametru \texttt{host} bude odpovídat IP adrese \texttt{slave1} serveru. 
+V návrhu je počítáno s kaskádovou replikací, tedy s tím, že se \texttt{slave1} bude připojovat na \texttt{slave2} místo na master server. To lze nastavit úpravou souboru \texttt{recovery.conf}, kde IP adresa parametru \texttt{host} bude odpovídat IP adrese \texttt{slave1} serveru.
 
 Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na \texttt{slave2}, který běží jako asynchronní a je kaskádově připojován ke slave1:
 
@@ -52,7 +84,7 @@ standby_mode='on'
 primary_conninfo='host=192.168.1.101 user=replikator password=kgigis'
 \end{lstlisting}
 
-To, že je replikace správně nastavená, lze zkontrolovat několika způsoby. Připojené repliky lze vypsat pomocí SQL příkazu \texttt{pg\_stat\_replication}, kde poslední parametr udává, zda se jedná o synchronní nebo asychronní replikaci. 
+To, že je replikace správně nastavená, lze zkontrolovat několika způsoby. Připojené repliky lze vypsat pomocí SQL příkazu \texttt{pg\_stat\_replication}, kde poslední parametr udává, zda se jedná o synchronní nebo asychronní replikaci.
 
 Spuštění SQL příkazu \texttt{pg\_stat\_replication} z master serveru:
 
@@ -125,5 +157,5 @@ V případě, že master server spadne, je možné během pár minut vyměnit ro
 trigger_file = '/tmp/trigger.txt'
 \end{lstlisting}
 
-Název souboru může být zvolen libovolně a nemusí obsahovat žádná data. Slave server pouze hlídá jeho existenci a jen to, že se soubor objeví v dané složce, způsobí, že slave server povýší na master. Obsah souboru mohou dále tvořit další instrukce, které mohou ovlivnit další chod databáze. 
+Název souboru může být zvolen libovolně a nemusí obsahovat žádná data. Slave server pouze hlídá jeho existenci a jen to, že se soubor objeví v dané složce, způsobí, že slave server povýší na master. Obsah souboru mohou dále tvořit další instrukce, které mohou ovlivnit další chod databáze.
 
