--- a/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
+++ b/text/latex_text/kapitoly/konfigurace/3a_konfigurace_replikace_streaming.tex
@@ -6,9 +6,10 @@ dvou slave serverů. Pokud je správně provedena příprava dle kapitoly
 první fázi je potřeba zeditovat soubor \texttt{postgresql.conf} na master
 serveru. Pro asynchonní replikaci stačí nastavit parametry:
 \begin{itemize}
-\item \texttt{wal\_level}, který určuje, jaké informace mají být do transakčního
-  logu (WAL) zapisovány a
-\item \texttt{max\_wal\_senders}, který nastavuje maximální počet připojených slave serverů.
+  \item \texttt{wal\_level}, který určuje, jaké informace mají být do transakčního
+    logu (WAL) zapisovány a
+  \item \texttt{max\_wal\_senders}, který nastavuje maximální počet připojených
+    slave serverů.
 \end{itemize}
 
 \begin{framed}
@@ -36,7 +37,7 @@ synchronous_standby_names = 'gis'
 \end{lstlisting}
 
 Stejně tak je potřeba konfigurovat \texttt{postgresql.conf} na slave serverech.
-Hodnoty parametrů \texttt{wal\_level} a \texttt{max\_level\_sender} můžou a
+Hodnoty parametrů \texttt{wal\_level} a \texttt{max\_level\_sender} mohou a
 nemusí zůstat stejné jako na masteru. Pokud však má být slave připraven
 zastoupit master server v případě jeho výpadku, je nutné, aby hodnoty byly
 nastaveny shodně.  Na slave serveru je dále potřeba nastavit:
@@ -46,11 +47,11 @@ nastaveny shodně.  Na slave serveru je dále potřeba nastavit:
 \begin{itemize}
   \item\texttt{hot\_standby}, který určuje, zda je na slave serveru umožněno
     dotazování a
-  \item\texttt{hot\_stadby\_feedback}, který který omezuje riziko přerušení
-    dotazu na slave, v případě kolidujících změn na master databázi
+  \item\texttt{hot\_stadby\_feedback}, který omezuje riziko přerušení
+    dotazu na slave v případě kolidujících změn na master databázi.
 \end{itemize}
 
-Konfigurace \texttt{postgresql.conf} shodně na obou slave serverech (na \texttt{slave1} a \texttt{slave2}):
+Konfigurace \texttt{postgresql.conf} shodně na obou slave serverech:
 \begin{lstlisting}
 wal_level = hot_standby
 max_wal_senders = 5
@@ -60,83 +61,99 @@ hot_standby_feedback = on
 
 Posledním krokem je vytvoření souboru \texttt{recovery.conf} na slave serveru ve
 složce s daty, který definuje parametry:
-\texttt{standby\_mode}, který povoluje či zakazuje použití serveru jako slave a
-\texttt{primary\_conninfo}, který nastavuje informace o serveru, ze kterého
-budou data replikována. Parametr nastavuje IP adresu serveru, ze kterého se data
-budou replikovat, název replikačního uživatele a jeho heslo a v případě
-synchronní replikace ještě klíčové slovo, které musí být shodné s hodnotou,
-která byla nastavená na master serveru v souboru \texttt{postgresql.conf} v
-parametru \texttt{synchronous\_standby\_name}.
+\begin{framed}
+  zkontrolovat obsah
+\end{framed}
+\begin{itemize}
+  \item \texttt{standby\_mode}, který povoluje či zakazuje použití serveru jako
+    slave a
+  \item \texttt{primary\_conninfo}, který nastavuje informace o serveru, ze
+    kterého budou data replikována - IP adresu serveru, port, název replikačního
+    uživatele a jeho heslo a v případě synchronní replikace ještě hodnotu,
+    která musí být shodná s hodnotou, která byla nastavená na master serveru v
+    souboru \texttt{postgresql.conf} v parametru
+    \texttt{synchronous\_standby\_name}.
+\end{itemize}
 
-Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na \texttt{slave1}, který je připojován na master server a běží jako synchronní:
+Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na
+\texttt{slave1}, který je připojen k master serveru a replikuje synchronně:
 
 \begin{lstlisting}
 standby_mode='on'
 primary_conninfo='host=192.168.1.100 user=replikator password=kgigis application_name=gis'
 \end{lstlisting}
 
-V návrhu je počítáno s kaskádovou replikací, tedy s tím, že se \texttt{slave1} bude připojovat na \texttt{slave2} místo na master server. To lze nastavit úpravou souboru \texttt{recovery.conf}, kde IP adresa parametru \texttt{host} bude odpovídat IP adrese \texttt{slave1} serveru.
+V návrhu je počítáno s kaskádovou replikací, tedy s tím, že se \texttt{slave1}
+bude připojovat k \texttt{slave2}, nikoli k master serveru. To lze nastavit
+úpravou souboru \texttt{recovery.conf}, kde IP adresa parametru \texttt{host}
+bude odpovídat IP adrese serveru \texttt{slave1}.
 
-Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na \texttt{slave2}, který běží jako asynchronní a je kaskádově připojován ke slave1:
+Ukázka konfigurace \texttt{recovery.conf} uloženého ve složce s daty na
+\texttt{slave2}, který replikuje asynchronně a připojuje se k
+\texttt{slave1}:
 
 \begin{lstlisting}
 standby_mode='on'
 primary_conninfo='host=192.168.1.101 user=replikator password=kgigis'
 \end{lstlisting}
 
-To, že je replikace správně nastavená, lze zkontrolovat několika způsoby. Připojené repliky lze vypsat pomocí SQL příkazu \texttt{pg\_stat\_replication}, kde poslední parametr udává, zda se jedná o synchronní nebo asychronní replikaci.
+To, že je replikace správně nastavená, lze zkontrolovat několika způsoby.
+Připojené slave servery lze vypsat pomocí dotazu nad tabulkou
+\texttt{pg\_stat\_replication}, kde poslední atribut udává, zda se jedná o
+synchronní, nebo asychronní replikaci.
 
-Spuštění SQL příkazu \texttt{pg\_stat\_replication} z master serveru:
+Výsledek dotazu spuštěného na master serveru:
 
 \begin{lstlisting}
-SELECT usename, application_name, client_addr, state, sync_state FROM pg_stat_replication ;
+SELECT usename, application_name, client_addr, state, sync_state FROM pg_stat_replication;
 \end{lstlisting}
 
-    \begin{table}[H]
-      \label{pgHba}
-        \begin{center}
-          \begin{tabular}{lll}
-            \texttt{-[ RECORD 1 ]----} & \texttt{+} & \texttt{--------------}\\
-                      \texttt{usename} &           \texttt{|} &  \texttt{replikator}\\
-            \texttt{application\_name} &  \texttt{|} &  \texttt{gis}\\
-                 \texttt{client\_addr} &       \texttt{|} &  \texttt{192.168.1.101}\\
-                        \texttt{state} &             \texttt{|} &  \texttt{streaming}\\
-                  \texttt{sync\_state} &        \texttt{|} &  \texttt{sync}\\
-          \end{tabular}
-        \end{center}
-    \end{table}
+\begin{table}[H]
+  \label{pgHba}
+  \begin{center}
+    \begin{tabular}{lll}
+      \texttt{-[ RECORD 1 ]----} & \texttt{+} & \texttt{--------------}\\
+      \texttt{usename}           & \texttt{|} & \texttt{replikator}\\
+      \texttt{application\_name} & \texttt{|} & \texttt{gis}\\
+      \texttt{client\_addr}      & \texttt{|} & \texttt{192.168.1.101}\\
+      \texttt{state}             & \texttt{|} & \texttt{streaming}\\
+      \texttt{sync\_state}       & \texttt{|} & \texttt{sync}\\
+    \end{tabular}
+  \end{center}
+\end{table}
 
-Spuštění stejného SQL příkazu \texttt{pg\_stat\_replication} ze \texttt{slave1}:
+Výsledek téhož dotazu spuštěného na \texttt{slave1}:
 
-    \begin{table}[H]
-      \label{pgHba}
-        \begin{center}
-          \begin{tabular}{lll}
-            \texttt{-[ RECORD 1 ]----} & \texttt{+} & \texttt{--------------}\\
-                      \texttt{usename} &           \texttt{|} &  \texttt{replikator}\\
-            \texttt{application\_name} &  \texttt{|} &  \texttt{walreceiver}\\
-                 \texttt{client\_addr} &       \texttt{|} &  \texttt{192.168.1.102}\\
-                        \texttt{state} &             \texttt{|} &  \texttt{streaming}\\
-                  \texttt{sync\_state} &        \texttt{|} &  \texttt{async}\\
-          \end{tabular}
-        \end{center}
-    \end{table}
-Stejně tak lze na slave serveru zjistit, zda běží jako replika či nikoli pomocí SQL příkazu \texttt{pg\_is\_in\_recovery()}:
+\begin{table}[H]
+  \label{pgHba}
+  \begin{center}
+    \begin{tabular}{lll}
+      \texttt{-[ RECORD 1 ]----} & \texttt{+} & \texttt{--------------}\\
+      \texttt{usename}           & \texttt{|} & \texttt{replikator}\\
+      \texttt{application\_name} & \texttt{|} & \texttt{walreceiver}\\
+      \texttt{client\_addr}      & \texttt{|} & \texttt{192.168.1.102}\\
+      \texttt{state}             & \texttt{|} & \texttt{streaming}\\
+      \texttt{sync\_state}       & \texttt{|} & \texttt{async}\\
+    \end{tabular}
+  \end{center}
+\end{table}
+Stejně tak lze na slave serveru zjistit, zda skutečně replikuje z master serveru
+voláním funkce \texttt{pg\_is\_in\_recovery()}:
 
 \begin{lstlisting}
 postgres=# select pg_is_in_recovery();
 \end{lstlisting}
-    \begin{table}[H]
-        \begin{center}
-      \label{pgHba}
-          \begin{tabular}{l}
-            \texttt{pg\_is\_in\_recovery}\\
-            \texttt{---------------------------------}\\
-            \texttt{t}\\
-            \texttt{(1 row)}\\
-          \end{tabular}
-        \end{center}
-    \end{table}
+\begin{table}[H]
+  \begin{center}
+    \label{pgHba}
+    \begin{tabular}{l}
+      \texttt{pg\_is\_in\_recovery}\\
+      \texttt{---------------------------------}\\
+      \texttt{t}\\
+      \texttt{(1 row)}\\
+    \end{tabular}
+  \end{center}
+\end{table}
 
 Zároveň na slave server nesmí být možné zapsat žádná data:
 
@@ -144,18 +161,20 @@ Zároveň na slave server nesmí být možné zapsat žádná data:
 INSERT INTO student (jmeno) VALUES('Jan Vlasovec');
 \end{lstlisting}
 \begin{lstlisting}[keywordstyle=\color{black},identifierstyle=\color{black},stringstyle=\color{black}]
-ERROR:  cannot execute INSERT in a read-only transaction
+ERROR: cannot execute INSERT in a read-only transaction
 \end{lstlisting}
 
-Připojené repliky lze vypsat pomocí SQL příkazu \texttt{pg\_stat\_replication}, kde poslední parametr udává, zda se jedná o synchronní nebo asychronní replikaci:
-
-
-
-V případě, že master server spadne, je možné během pár minut vyměnit role, určit jako master jeden ze slave serverů. Lze to udělat několik způsoby, jedním z nich je sledování existence souboru, který je definován v souboru \texttt{recovery.conf} na kterémkoli slave serveru:
+V případě, že master server spadne, je možné během pár minut vyměnit role a~určit
+jako master jeden ze slave serverů. Lze to udělat několik způsoby, jedním z~nich
+je sledování existence souboru definovaného v souboru \texttt{recovery.conf} na
+kterémkoli slave serveru:
 
 \begin{lstlisting}
 trigger_file = '/tmp/trigger.txt'
 \end{lstlisting}
 
-Název souboru může být zvolen libovolně a nemusí obsahovat žádná data. Slave server pouze hlídá jeho existenci a jen to, že se soubor objeví v dané složce, způsobí, že slave server povýší na master. Obsah souboru mohou dále tvořit další instrukce, které mohou ovlivnit další chod databáze.
+Název souboru může být zvolen libovolně a nemusí obsahovat žádná data. Slave
+server pouze hlídá jeho existenci a jen to, že se soubor objeví v dané složce,
+způsobí, že slave server povýší na master. Obsah souboru mohou dále tvořit další
+instrukce, které mohou ovlivnit další chod databáze.
 
